--- a/style.css
+++ b/style.css
@@ -17,7 +17,10 @@ body {
 .section {
   width: 100%;
 }
-
+a {
+  text-decoration: none;
+  color: #333;
+}
 .container {
   position: relative;
   width: 1170px;
@@ -25,7 +28,7 @@ body {
   color: #444;
   font-size: 14px;
   font-weight: 300;
-  font-family: Roboto, "Open Sans", Arial, sans-serif;
+  font-family: "Roboto Slab", Arial, sans-serif;
   overflow: hidden;
 }
 
@@ -122,14 +125,16 @@ ul.nav li a {
 }
 
 .hero {
+  padding-left: 10px;
   font-family: "Roboto Slab", sans-serif;
+
   color: white;
   font-weight: normal;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
 }
 
 h1.hero {
-  font-size: 54px;
+  font-size: 1.5rem;
 }
 
 h2.hero {
@@ -149,40 +154,6 @@ h1.hero:after {
 .flexcenter {
   display: flex;
   justify-content: center;
-}
-.reserve.big {
-  color: #ab001a;
-  border: 1px solid black;
-}
-.reserve.big:hover {
-  color: white;
-  background-color: #333;
-}
-.reserve {
-  color: #ab001a;
-  background-color: white;
-  border: 1px solid white;
-  padding: 10px 20px;
-  font-size: 20px;
-  cursor: pointer;
-  transition: background 0.15s linear;
-}
-.reserve.small {
-  color: #ab001a;
-  font-size: 16px;
-  border: 1px solid black;
-  border-radius: 2px;
-  transition: background 0.15s linear;
-}
-.reserve.small:hover {
-  color: white;
-  background-color: darkgray;
-  border-color: white;
-  border-radius: 2px;
-}
-.reserve:hover {
-  background: rgba(255, 255, 255, 0.1);
-  cursor: pointer;
 }
 /* 
   Columns 
@@ -326,7 +297,6 @@ h1.hero:after {
   justify-content: center;
 }
 .buttonholder {
-  color: #ab001a;
   display: flex;
   justify-content: center;
   margin-block-start: 0.67em;
@@ -334,7 +304,29 @@ h1.hero:after {
   margin-inline-start: 0px;
   margin-inline-end: 0px;
 }
-
+.btn {
+  margin: 10px;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 400;
+  color: #333333;
+  text-align: center;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  border-color: #c7a065;
+  border-radius: 0.5px;
+  user-select: none;
+  background-color: transparent;
+  font-size: 1.5rem;
+  line-height: 1.5;
+}
+.btn-primary {
+  color: #fff;
+  background: #bd8f4a linear-gradient(180deg, #c7a065, #bd8f4a) repeat-x;
+  box-shadow: inset 0 1px 0 rgb(255 255 255 / 15%), 0 1px 1px rgb(0 0 0 / 8%);
+}
 .col.bg {
   background: #fff;
 }
