--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ a {
   background-color: #333;
 }
 #firstSection-price {
-  background-color: white;
+  background-color: black;
 }
 #connection-design {
   background-color: #bd8f4a;
@@ -142,11 +142,12 @@ ul.nav li a {
 
   color: white;
   font-weight: normal;
-  letter-spacing: 2px;
+  letter-spacing: 4px;
 }
 
 h1.hero {
-  font-size: 1.5rem;
+  font-size: 2rem;
+  text-align: center;
 }
 
 h2.hero {
@@ -170,6 +171,19 @@ h1.hero:after {
 /* 
   Columns 
 */
+.worker-container {
+  margin-left: auto;
+  margin-right: auto;
+  background-color: black;
+  max-width: 400px;
+  border-radius: 7%;
+}
+
+.worker-container h1,
+p {
+  color: #ffffff;
+  text-align: center;
+}
 
 .col {
   float: left;
@@ -184,17 +198,18 @@ h1.hero:after {
 }
 
 .col.three {
-  display: flexbox;
-  width: 31.3%;
+  display: inline-block;
+  width: 33%;
   margin: 0 1%;
   align-items: center;
-
+  justify-content: center;
+  float: none;
   background: black;
   border-radius: 10px;
 }
 
 .col.two {
-  width: 40%;
+  width: 50%;
   margin: 0 2.5%;
   padding: 0 2.5%;
 }
@@ -328,13 +343,19 @@ h1.hero:after {
   -moz-user-select: none;
   -ms-user-select: none;
   border-color: #c7a065;
-  border-radius: 0.5px;
+  border-radius: 6px;
   user-select: none;
   background-color: transparent;
   font-size: 1.5rem;
   line-height: 1.5;
 }
 .btn-primary {
+  color: #fff;
+  background: #bd8f4a linear-gradient(180deg, #c7a065, #bd8f4a) repeat-x;
+  box-shadow: inset 0 1px 0 rgb(255 255 255 / 15%), 0 1px 1px rgb(0 0 0 / 8%);
+}
+.btn-secondary {
+  font-size: 1.1rem;
   color: #fff;
   background: #bd8f4a linear-gradient(180deg, #c7a065, #bd8f4a) repeat-x;
   box-shadow: inset 0 1px 0 rgb(255 255 255 / 15%), 0 1px 1px rgb(0 0 0 / 8%);
@@ -517,6 +538,12 @@ h2 {
   }
   .group {
     display: none;
+  }
+  .service-name h2 {
+    font-size: 1.2em;
+  }
+  .service-price h2 {
+    font-size: 1.2em;
   }
 }
 
@@ -731,6 +758,37 @@ img {
   background-color: #717171;
 }
 
+/* Prices page grid container */
+.grid-container {
+  display: grid;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  grid-template-columns: [col1] 70% [col2] 30%;
+  color: #333;
+}
+.service-name h2 {
+  margin-bottom: 10px;
+  padding: 10px;
+  text-align: start;
+  color: white;
+  border: 2px solid #c7a065;
+  border-radius: 10px;
+}
+.service-price h2 {
+  margin-bottom: 10px;
+  padding: 10px;
+  text-align: center;
+  color: white;
+}
+img {
+  max-height: 690px;
+}
+.logo-image {
+  width: 170px;
+  height: 50px;
+}
+
 /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
@@ -762,4 +820,14 @@ img {
   .text {
     font-size: 11px;
   }
+}
+
+/*GALERY SECTION*/
+
+#galery-section {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 1100px;
 }
