--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ a {
   background-color: #333;
 }
 #firstSection-price {
+  padding-top: 50px;
   background-color: black;
 }
 #connection-design {
