--- a/style.css
+++ b/style.css
@@ -584,7 +584,7 @@ header {
 .nav-toggle-label span::before,
 .nav-toggle-label span::after {
   display: block;
-  background: black;
+  background: white;
   height: 2px;
   width: 2em;
   border-radius: 2px;
@@ -817,13 +817,19 @@ img {
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 450px) {
   .main-image-container {
-    margin-top: 120px;
+    margin-top: 70px;
   }
   #firstSection {
     padding: 5px;
   }
   .text {
     font-size: 11px;
+  }
+  .service-name h2 {
+    font-size: 25px;
+  }
+  .service-price h2 {
+    font-size: 25px;
   }
 }
 
@@ -836,4 +842,57 @@ img {
   margin-right: auto;
   margin-left: auto;
   max-width: 1100px;
+}
+
+/*MENU BUTTON*/
+
+.menu-btn {
+  background-color: white;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70px;
+  height: 60px;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+  text-align: left;
+  /* border: 3px solid #fff; */
+}
+.menu-btn__burger {
+  width: 50px;
+  height: 4px;
+  background: black;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2);
+  transition: all 0.5s ease-in-out;
+}
+.menu-btn__burger::before,
+.menu-btn__burger::after {
+  content: "";
+  position: absolute;
+  width: 50px;
+  height: 4px;
+  background: black;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2);
+  transition: all 0.5s ease-in-out;
+}
+.menu-btn__burger::before {
+  transform: translateY(-16px);
+}
+.menu-btn__burger::after {
+  transform: translateY(16px);
+}
+/* ANIMATION */
+.menu-btn.open .menu-btn__burger {
+  transform: translateX(-50px);
+  background: transparent;
+  box-shadow: none;
+}
+.menu-btn.open .menu-btn__burger::before {
+  transform: rotate(45deg) translate(35px, -35px);
+}
+.menu-btn.open .menu-btn__burger::after {
+  transform: rotate(-45deg) translate(35px, 35px);
 }
